View Issue Details

IDProjectCategoryView StatusLast Update
0026790Open CASCADEOCCT:Visualizationpublic2016-04-20 15:51
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026790: Visualization, TKOpenGl - apply view resolution to the line width in OpenGl_Context::SetLineWidth()
DescriptionLine width is expected to be scaled within HiDPI monitors.
Steps To Reproducebugs vis bug26790
TagsNo tags attached.
Test case numberbugs vis bug26790

Relationships

child of 0025350 closedbugmaster Community Visualization - provide a dpi-scaling ratio for V3d_View 

Activities

git

2015-11-10 13:37

administrator   ~0047991

Branch CR26790 has been created by isk.

SHA-1: 2c53304b37ff467a6bffc27601e123ffa54940a5


Detailed log of new commits:

Author: isk
Date: Tue Nov 10 13:37:42 2015 +0300

    0026790: Visualization, TKOpenGl - apply view resolution to the line width in OpenGl_Context::SetLineWidth()
    Add ResolutionRatio() method in the Graphic3d_RenderingParams.

git

2015-11-10 14:17

administrator   ~0047994

Branch CR26790 has been updated forcibly by isk.

SHA-1: 1068ab6024b9add4921e4ae4f7f1875b885766e4

git

2015-11-11 09:02

administrator   ~0048031

Branch CR26790 has been updated forcibly by isk.

SHA-1: 91d6401c0de3667b835266e1afcefea4dbac05b6

isk

2015-11-11 09:03

developer   ~0048032

Dear Kirill,
please review the branch CR26790.

kgv

2015-11-11 09:14

developer   ~0048033

Please test the patch.

mkv

2015-11-12 12:32

tester   ~0048094

Dear BugMaster,
Branch CR26790 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 91d6401c0de3667b835266e1afcefea4dbac05b6

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 151 (149 on master)

products component :
Linux: 39 (39 on master)
Windows: 0 (0 on master)

There are new additional compilation warnings on MacOS platform:

http://jenkins-test-01.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/CR26790-master_prepare_build_occt_MacOS/1/warnings7Result/category.2051178081/package.1017695755/file.291438332/
StepShape_QualifiedRepresentationItem.hxx:41:24::43, Clang (LLVM based), Priority: Normal
'StepShape_OrientedEdge::Init' hides overloaded virtual functions

http://jenkins-test-01.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/CR26790-master_prepare_build_occt_MacOS/1/warnings7Result/category.2051178081/package.1017695755/file.1312635840/
StepShape_Subface.hxx::44, Clang (LLVM based), Priority: Normal
'StepFEA_FeaAxis2Placement3d::Init' hides overloaded virtual functions

http://jenkins-test-01.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/CR26790-master_prepare_build_occt_MacOS/1/warnings7Result/category.2051178081/package.-1747973247/
RWStepAP214_ReadWriteModule.cxx:24, Clang (LLVM based), Priority: Normal
'StepRepr_RepresentationRelationshipWithTransformation::Init' hides overloaded virtual function

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR26790-master-occt-64/Debian70-64/bugs/vis/bug26790.html
http://occt-tests/CR26790-master-occt-64/Windows-64-VC10/bugs/vis/bug26790.html
bugs vis bug26790: OK

Testing on Linux:
occt component :
Total MEMORY difference: 92669256 / 92265160 [+0.44%]
Total CPU difference: 19729.159999999752 / 19654.95999999985 [+0.38%]
products component :
Total MEMORY difference: 26211123 / 26273564 [-0.24%]
Total CPU difference: 7467.290000000005 / 7540.919999999997 [-0.98%]

Testing on Windows:
occt component :
Total MEMORY difference: 58460794 / 58098316 [+0.62%]
Total CPU difference: 18588.236754598765 / 18063.542991198887 [+2.90%]
products component :
Total MEMORY difference: 17261509 / 17166598 [+0.55%]
Total CPU difference: 5779.821449899964 / 5624.304052999975 [+2.77%]

There are no differences in images found by testdiff.

mkv

2015-11-12 12:32

tester   ~0048095

Dear isk,
could you please review following test case
bugs vis bug26790

mkv

2015-11-12 12:32

tester   ~0048096

Dear isk,
Branch CR26790 has been rejected due to:
- additional warnings

kgv

2015-11-12 12:57

developer   ~0048103

Dear bugmaster,

modifications in the patch can not cause listed warnings.

git

2015-11-16 10:43

administrator   ~0048206

Branch CR26790_1 has been created by inv.

SHA-1: 4fd19eba681150b56f2b045c1639adbd85c294ef


Detailed log of new commits:

Author: isk
Date: Wed Nov 11 08:50:04 2015 +0300

    0026790: Visualization, TKOpenGl - apply view resolution to the line width in OpenGl_Context::SetLineWidth()
    Add ResolutionRatio() method in the Graphic3d_RenderingParams.
    Add SetResolutionRatio() method in the OpenGl_Context.

bugmaster

2015-11-16 12:24

administrator   ~0048207

StepShape_QualifiedRepresentationItem.hxx:41:24::43, Clang (LLVM based), Priority: Normal
'StepShape_OrientedEdge::Init' hides overloaded virtual functions

StepShape_Subface.hxx::44, Clang (LLVM based), Priority: Normal
'StepFEA_FeaAxis2Placement3d::Init' hides overloaded virtual functions

Are reproduced of latest master

RWStepAP214_ReadWriteModule.cxx:24, Clang (LLVM based), Priority: Normal
'StepRepr_RepresentationRelationshipWithTransformation::Init' hides overloaded virtual function
Warning was removed on latest master

So fix does not cause listed below warnings

kgv

2015-11-16 12:55

developer   ~0048209

> So fix does not cause listed below warnings
so why the bug has not been switched to "tested"?

bugmaster

2015-11-16 17:19

administrator   ~0048236

I am not sure that bugs vis bug26790 test case was reviewed

kgv

2015-11-16 17:23

developer   ~0048238

> I am not sure that bugs vis bug26790 test case was reviewed
snapshots within this test case are fine, please switch to tested.

git

2016-04-17 14:19

administrator   ~0053123

Branch CR26790 has been deleted by kgv.

SHA-1: 91d6401c0de3667b835266e1afcefea4dbac05b6

git

2016-04-17 14:19

administrator   ~0053124

Branch CR26790_1 has been deleted by kgv.

SHA-1: 4fd19eba681150b56f2b045c1639adbd85c294ef

Related Changesets

occt: master 75c262a9

2015-11-11 05:50:04

isk


Committer: bugmaster Details Diff
0026790: Visualization, TKOpenGl - apply view resolution to the line width in OpenGl_Context::SetLineWidth()
Add ResolutionRatio() method in the Graphic3d_RenderingParams.
Add SetResolutionRatio() method in the OpenGl_Context.
Affected Issues
0026790
mod - src/Graphic3d/Graphic3d_RenderingParams.hxx Diff File
mod - src/OpenGl/OpenGl_Context.cxx Diff File
mod - src/OpenGl/OpenGl_Context.hxx Diff File
mod - src/OpenGl/OpenGl_View_Redraw.cxx Diff File
add - tests/bugs/vis/bug26790 Diff File

Issue History

Date Modified Username Field Change
2015-10-21 09:23 kgv New Issue
2015-10-21 09:23 kgv Assigned To => kgv
2015-10-21 09:23 kgv Relationship added child of 0025350
2015-10-21 09:23 kgv Assigned To kgv => isk
2015-10-21 09:23 kgv Status new => assigned
2015-11-10 13:37 git Note Added: 0047991
2015-11-10 13:38 isk Assigned To isk => kgv
2015-11-10 13:38 isk Status assigned => resolved
2015-11-10 13:38 isk Steps to Reproduce Updated
2015-11-10 14:17 git Note Added: 0047994
2015-11-10 14:37 isk Assigned To kgv => isk
2015-11-10 14:37 isk Status resolved => assigned
2015-11-10 14:37 isk Steps to Reproduce Updated
2015-11-11 09:02 git Note Added: 0048031
2015-11-11 09:03 isk Note Added: 0048032
2015-11-11 09:03 isk Assigned To isk => kgv
2015-11-11 09:03 isk Status assigned => resolved
2015-11-11 09:03 isk Steps to Reproduce Updated
2015-11-11 09:14 kgv Note Added: 0048033
2015-11-11 09:14 kgv Assigned To kgv => bugmaster
2015-11-11 09:14 kgv Status resolved => reviewed
2015-11-11 12:49 mkv Assigned To bugmaster => mkv
2015-11-12 12:32 mkv Note Added: 0048094
2015-11-12 12:32 mkv Note Added: 0048095
2015-11-12 12:32 mkv Note Added: 0048096
2015-11-12 12:32 mkv Assigned To mkv => isk
2015-11-12 12:32 mkv Status reviewed => assigned
2015-11-12 12:33 mkv Test case number => bugs vis bug26790
2015-11-12 12:57 kgv Note Added: 0048103
2015-11-12 12:57 kgv Assigned To isk => bugmaster
2015-11-12 12:57 kgv Status assigned => feedback
2015-11-16 10:43 git Note Added: 0048206
2015-11-16 12:24 bugmaster Note Added: 0048207
2015-11-16 12:25 bugmaster Assigned To bugmaster => isk
2015-11-16 12:55 kgv Note Added: 0048209
2015-11-16 12:55 kgv Assigned To isk => bugmaster
2015-11-16 17:19 bugmaster Note Added: 0048236
2015-11-16 17:23 kgv Note Added: 0048238
2015-11-16 18:26 bugmaster Status feedback => tested
2015-11-20 12:07 bugmaster Changeset attached => occt master 75c262a9
2015-11-20 12:07 bugmaster Status tested => verified
2015-11-20 12:07 bugmaster Resolution open => fixed
2016-04-17 14:19 git Note Added: 0053123
2016-04-17 14:19 git Note Added: 0053124
2016-04-20 15:42 aiv Fixed in Version => 7.0.0
2016-04-20 15:51 aiv Status verified => closed