0026790: Visualization, TKOpenGl - apply view resolution to the line width in OpenGl_Context::SetLineWidth() Add ResolutionRatio() method in the Graphic3d_RenderingParams. Add SetResolutionRatio() method in the OpenGl_Context.